generate tsoa routes and swagger.json
